hard-gists/6206626/run.log
=== Docker Run Log for 6206626 ===
Started at: Mi 29. Okt 16:27:05 CET 2025

[2025-10-29 16:27:05] START: Running container for 6206626
[2025-10-29 16:27:05] SUCCESS: Container 09cbc24da01fd7cc25e43176211186d1af5ddff55cf408cf248369521dd43650 started for 6206626
=== Container logs for 6206626 ===
  File "/snippet.py", line 65
    print "BUILDING MAP!"
    ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6206626 ===
[2025-10-29 16:27:07] INFO: Container 09cbc24da01fd7cc25e43176211186d1af5ddff55cf408cf248369521dd43650 has stopped
